Fix spacing

--- a/components/recruit/index.css
+++ b/components/recruit/index.css
@@ -47,13 +47,14 @@
 .Recruit-actions {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 .Recruit-action,
 .Recruit-action:hover {
   display: inline-block;
   padding: 0.7em 1em 0.6em;
-  margin: 1rem 1rem 0 0;
+  margin: 0 1rem 1rem 0;
   white-space: nowrap;
   font: var(--heading-font);
   font-size: 1.25rem;
